--- a/paper/evaluation/results.tex
+++ b/paper/evaluation/results.tex
@@ -91,7 +91,7 @@ After executing the $\SI{120}{}$ failed test runs, the log files have been inspe
 	\label{tbl:rq4-first-failure}
 \end{table}
 
-\noindent The previous results have been visualised in \Cref{fig:rq4-performance}. These charts confirm the low accuracy of the ROCKET algorithm. The Alpha algorithm and the HGS algorithm offer the most accurate predictions, with the former algorithm being the most consistent. Notice the chart of the Greedy algorithm, which succeeds in successfully predicting some of the test runs, while failing to predict others. This behaviour is specific to a greedy heuristic.\\
+\noindent The previous results have been visualised in \Cref{fig:rq4-performance}. These charts confirm the low accuracy of the ROCKET algorithm. The Alpha algorithm and the HGS algorithm offer the most accurate predictions, with the former algorithm being the most consistent. Observe the chart of the Greedy algorithm. This algorithm manages to very accurately predict some of the test runs while failing to predict others anywhere near, a behaviour which is specific to a greedy heuristic.\\
 
 \clearpage
 
