--- a/paper/abstract-en/introduction.tex
+++ b/paper/abstract-en/introduction.tex
@@ -5,7 +5,7 @@
 
 \noindent Software engineers have experienced that the traditional software methodologies are no longer sufficient to handle this fast-paced development and, as a result, have shifted towards other strategies. Instead of implementing the entire application at once, developers now prefer the Agile approaches \cite{beck2001agile}. The Agile methodologies depict that a minimal version of the application should be released as soon as possible, to reduce the financial risks taken. Afterwards, the functionality is extended incrementally. A report of The Standish Group confirms that the adoption of these new approaches has led to an increased success rate for new projects \cite{standish2015chaos}.\\
 
-\noindent However, this evolution is not necessarily a good unfolding. Managing to complete a project is one thing, guaranteeing it is built reliably is a different matter. An increase in the complexity of software inevitably makes the software more error-prone. As an attempted solution, the Agile approaches propose Continuous Integration (CI) \cite{SmartJenkinsDefinitive}. This practice requires that the test suite of the application is executed after every code change (\Cref{fig:ext-en-ci}). Multiple CI-services have been created to assist in this process by means of automation. Optionally, every passed version can automatically be released to the end-users (Continuous Deployment).
+\noindent However, this evolution is not necessarily a good unfolding. Managing to complete a project is one thing, guaranteeing it is built reliably is a different matter. An increase in the complexity of software inevitably makes the software more error-prone. As an attempted solution, the Agile approaches propose Continuous Integration (CI) \cite{SmartJenkinsDefinitive,Myers:2011:AST:2161638}. This practice requires that the test suite of the application is executed after every code change (\Cref{fig:ext-en-ci}). Multiple CI-services have been created to assist in this process by means of automation. Optionally, every passed version can automatically be released to the end-users (Continuous Deployment \cite{ciusinggitlab}).
 
 \begin{figure}[h!]
 	\centering
