--- a/paper/abstract-nl/extended-abstract.tex
+++ b/paper/abstract-nl/extended-abstract.tex
@@ -46,8 +46,8 @@
 % Meta-information.
 \hypersetup{
 	pdfauthor = {Pieter De Clercq},
-	pdftitle = {Optimising Continuous Integration using Test Case Prioritisation},
-	pdfsubject = {Master's dissertation submitted in order to obtain the academic degree of Master of Science in Computer Science, june 2020},
+	pdftitle = {Optimaliseren van Continue Integratie door middel van Test Prioritering},
+	pdfsubject = {Masterproef ingediend tot het behalen van de academische graad van Master of Science in de informatica, juni 2020},
 	linkcolor = black,
 	citecolor = ugent-blue,
 	urlcolor = ugent-blue,
