--- a/paper/abstract-nl/introduction.tex
+++ b/paper/abstract-nl/introduction.tex
@@ -5,7 +5,7 @@
 
 \noindent Softwareontwikkelaars hebben ondervonden dat de traditionele ontwikkelingsmethoden deze evolutie niet kunnen bijbenen en hebben hun focus verlegd naar andere strategie\"en. In plaats van de volledige applicatie in één keer te implementeren, verkiezen ontwikkelaars vandaag de dag de Agile methoden \cite{beck2001agile}. Bij deze methoden is het hoofddoel om zo snel mogelijk een minimale versie van de applicatie op de markt te brengen, om de financi\"ele risico's te verkleinen. Achteraf kan extra functionaliteit stapsgewijs worden toegevoegd. Een rapport van The Standish Group bevestigt dat de slaagkans aanzienlijk groter is bij het hanteren van een Agile ontwikkelingsmethode \cite{standish2015chaos}.\\
 
-\noindent Deze evolutie draagt echter ook negatieve gevolgen met zich mee. Het is één zaak om een project succesvol af te leveren, maar daarmee is de betrouwbaarheid nog niet gegarandeerd. Complexere software verhoogt onvermijdelijk de vatbaarheid voor fouten. De Agile aanpak tracht dit probleem op te lossen door middel van Continue Integratie (CI) \cite{SmartJenkinsDefinitive}. Dit idee vereist dat het volledige testpakket (succesvol) wordt uitgevoerd na elke aanpassing aan de code (\Cref{fig:ext-nl-ci}). Vandaag de dag bestaan verschillende CI-services die dit process versoepelen door middel van automatisatie. Dit automatisatieproces kan optioneel worden aangevuld met het automatisch uitrollen van nieuwe versies naar de eindgebruikers (Continuous Deployment).
+\noindent Deze evolutie draagt echter ook negatieve gevolgen met zich mee. Het is één zaak om een project succesvol af te leveren, maar daarmee is de betrouwbaarheid nog niet gegarandeerd. Complexere software verhoogt onvermijdelijk de vatbaarheid voor fouten. De Agile aanpak tracht dit probleem op te lossen door middel van Continue Integratie (CI) \cite{SmartJenkinsDefinitive,Myers:2011:AST:2161638}. Dit idee vereist dat het volledige testpakket (succesvol) wordt uitgevoerd na elke aanpassing aan de code (\Cref{fig:ext-nl-ci}). Vandaag de dag bestaan verschillende CI-services die dit process versoepelen door middel van automatisatie. Dit automatisatieproces kan optioneel worden aangevuld met het automatisch uitrollen van nieuwe versies naar de eindgebruikers (Continuous Deployment \cite{ciusinggitlab}).
 
 \begin{figure}[h!]
 	\centering
