--- a/paper/software-engineering/agile-software-development/continuous-integration.tex
+++ b/paper/software-engineering/agile-software-development/continuous-integration.tex
@@ -22,7 +22,7 @@ In traditional software development, the design phase usually leads to a represe
 	\label{fig:agile-ci-lifecycle}
 \end{figure}
 
-\noindent Adopting \CI{} can prove to be a lengthy and repetitive task. Luckily, a variety of tools and frameworks exist to automate this process. These tools are typically attached to a version control system (e.g. Git, Mercurial, \dots) using a \texttt{post-receive} hook \cite{SmartJenkinsDefinitive}. Every time the developers push a commit to the repository, the hook will notify the CI system. The CI system will respond accordingly by automatically building the code and executing the test cases. Optionally, we can configure the CI system to automatically publish successful builds to the end-users, a process referred to as \emph{Continuous Delivery}. This paper will now proceed by discussing four prominent CI systems.
+\noindent Adopting \CI{} can prove to be a lengthy and repetitive task. Luckily, a variety of tools and frameworks exist to automate this process. These tools are typically attached to a version control system (e.g. Git, Mercurial, \dots) using a \texttt{post-receive} hook \cite{SmartJenkinsDefinitive}. Every time the developers push a commit to the repository, the hook will notify the CI system. The CI system will respond accordingly by automatically building the code and executing the test cases. Optionally, we can configure the CI system to automatically publish successful builds to the end-users, a process referred to as \emph{Continuous Deployment} \cite{ciusinggitlab}. This paper will now proceed by discussing four prominent CI systems.
 
 \input{software-engineering/agile-software-development/continuous-integration/jenkins.tex}
 \input{software-engineering/agile-software-development/continuous-integration/github-actions.tex}
