--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -92,6 +92,7 @@
 \hypersetup{
 	pdfauthor = {Pieter De Clercq},
 	pdftitle = {Optimising Continuous Integration using Test Case Prioritisation},
+	pdfkeywords = {Continuous Integration, test suite, performance, optimisation, prioritisation},
 	pdfsubject = {Master's dissertation submitted in order to obtain the academic degree of Master of Science in Computer Science, june 2020},
 	linkcolor = black,
 	citecolor = ugent-blue,
