--- a/paper/abstract-en/extended-abstract.tex
+++ b/paper/abstract-en/extended-abstract.tex
@@ -32,6 +32,28 @@
 % Tikz libraries.
 \usetikzlibrary{arrows,arrows.meta,automata,calc,shapes.geometric,positioning}
 
+% Colours.
+\definecolor{black}{RGB}{0, 0, 0}
+\definecolor{bisque}{HTML}{FFE4C4}
+\definecolor{code-background}{HTML}{EEEEEE}
+\definecolor{code-delim}{RGB}{20,105,176}
+\definecolor{darkgray}{rgb}{.4,.4,.4}
+\definecolor{groovyblue}{HTML}{0000A0}
+\definecolor{groovygreen}{HTML}{008000}
+\colorlet{code-punct}{red!60!black}
+\definecolor{ugent-blue}{RGB}{30, 100, 200}
+
+% Meta-information.
+\hypersetup{
+	pdfauthor = {Pieter De Clercq},
+	pdftitle = {Optimising Continuous Integration using Test Case Prioritisation},
+	pdfsubject = {Master's dissertation submitted in order to obtain the academic degree of Master of Science in Computer Science, june 2020},
+	linkcolor = black,
+	citecolor = ugent-blue,
+	urlcolor = ugent-blue,
+	colorlinks = true,
+}
+
 % Terms.
 \newcommand{\travisci}{Travis CI}
 \newcommand{\velocity}{VeloCIty}
